# kodegen-tools-database

./: Cargo.toml  README.md  docker-compose.yml
examples/: database_demo.rs
examples/common/: mod.rs
init-scripts/: fixtures.sql  mariadb.sql  mysql.sql  postgres.sql  sqlite.sql
src/: connection.rs  dsn.rs  error.rs  lib.rs  main.rs  readonly.rs  schema_queries.rs  sql_limiter.rs  sql_parser.rs  ssh_tunnel.rs  types.rs  validate.rs
src/tools/: execute_sql.rs  get_pool_stats.rs  get_stored_procedures.rs  get_table_indexes.rs  get_table_schema.rs  helpers.rs  list_schemas.rs  list_tables.rs  mod.rs  timeout.rs
src/tools/execute_sql/: executor.rs  helpers.rs  mod.rs  row_converter.rs
